Added: Search button to action bar.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">XBMC Remote (labs)</string>
-	<string name="empty_albums">No albums found</string>
+	<string name="empty_albums">No albums found.</string>
+	
+	<string name="description_search">Search</string>
 
 </resources>
