--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 	<string name="app_name">XBMC Remote (sandbox)</string>
-	<string name="empty_albums">No albums found.</string>
 	
+	<string name="empty_albums">No albums found.</string>
+	<string name="empty_artists">No artists found.</string>
 	
 	<string name="title_music">Music Library</string>
 	
