Added: Android authenticator for decoupled account management

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,10 @@
 	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
 	<string name="toast_music_db_updated">Music database updated.</string>
 
+	<string name="login_username_label">Username</string>
+	<string name="login_password_label">Password</string>
+	<string name="login_ok_button">Sign in</string>
+	<string name="authenticator_label">XBMC Host</string>
+	<string name="authenticator_progress">Authenticating\u2026</string>
+
 </resources>
