--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
 	<string name="addaccount_next_button">Next</string>
 	<string name="addaccount_prev_button">Previous</string>
 	<string name="addaccount_scan_button">Rescan</string>
-	<string name="addaccount_scan_text">Scanning your network for XBMC hosts. Please make sure that XBMC has Zeroconf enabled.</string>
+	<string name="addaccount_scan_text">Scanning your network for XBMC hosts. Please make sure that XBMC is running and has Zeroconf is enabled.</string>
 	<string name="authenticator_label">XBMC Host</string>
 	<string name="authenticator_progress">Authenticating\u2026</string>
 
