Added: Accounts can now be saved and are visible in the app, though still work needed (what, userdata properties can srsly be only Strings??).

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
 	<string name="addaccount_password_label">Password</string>
 	<string name="addaccount_next_button">Next</string>
 	<string name="addaccount_prev_button">Previous</string>
+	<string name="addaccount_close_button">Close</string>
 	<string name="addaccount_manualadd_button">Manually Add</string>
 	<string name="addaccount_scan_button">Rescan</string>
 	<string name="addaccount_scanning">Scanning\u2026</string>
