Added: Resource files and classes from Android's ActionBarCompat example.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,10 @@
 	<string name="description_search">Search</string>
 	<string name="description_refresh">Refresh</string>
 	
+    <string name="menu_refresh">Refresh</string>
+    <string name="menu_search">Search</string>
+    <string name="menu_share">Share</string>	
+	
 	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
 	<string name="toast_music_db_updated">Music database updated.</string>
 
