--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,10 @@
 	
     <string name="menu_refresh">Refresh</string>
     <string name="menu_search">Search</string>
-    <string name="menu_share">Share</string>	
+    <string name="menu_share">Share</string>
+    
+    <string name="toast_syncing_all">Syncing all databases\u2026</string>
+    <string name="toast_synced_all">All databases synced.</string>
 	
 	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
 	<string name="toast_music_db_updated">Music database updated.</string>
