--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="menu_refresh">Refresh</string>
     <string name="menu_search">Search</string>
     <string name="menu_share">Share</string>
+
+    <string name="tab_music_albums">Albums</string>
+    <string name="tab_music_artists">Artists</string>
+    <string name="tab_music_files">Files</string>
     
     <string name="toast_syncing_all">Syncing all databases\u2026</string>
     <string name="toast_synced_all">All databases synced.</string>
