--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 	<string name="app_name">XBMC Remote</string>
-	
+
 	<string name="empty_albums">No albums found.</string>
 	<string name="empty_artists">No artists found.</string>
 	<string name="empty_music_sources">No music sources found.</string>
-	
+
 	<string name="title_empty"></string>
 	<string name="title_music">Music Library</string>
-	
+	<string name="title_movies">Movies</string>
+
 	<string name="description_search">Search</string>
 	<string name="description_refresh">Refresh</string>
-	
+
     <string name="menu_refresh">Refresh</string>
     <string name="menu_search">Search</string>
     <string name="menu_share">Share</string>
@@ -19,10 +20,10 @@
     <string name="tab_music_albums">Albums</string>
     <string name="tab_music_artists">Artists</string>
     <string name="tab_music_files">Files</string>
-    
+
     <string name="toast_syncing_all">Syncing all databases\u2026</string>
     <string name="toast_synced_all">All databases synced.</string>
-	
+
 	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
 	<string name="toast_music_db_updated">Music database updated.</string>
 
