Added recently added movies to home page.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
 	<string name="empty_music_sources">No music sources found.</string>
 
 	<string name="latest_albums">Latest Albums</string>
+	<string name="recently_added">Recently Added</string>
 
 	<string name="title_empty"></string>
 	<string name="title_home">Home</string>
