--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
 	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
 	<string name="toast_music_db_updated">Music database updated.</string>
 
+	<string name="accountwizard_title">Setup XBMC Devices</string>
 	<string name="addaccount_username_label">Username</string>
 	<string name="addaccount_password_label">Password</string>
 	<string name="addaccount_next_button">Next</string>
