Added first page of wizard.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,11 @@
 	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
 	<string name="toast_music_db_updated">Music database updated.</string>
 
-	<string name="accountwizard_title">Setup XBMC Devices</string>
+	<string name="accountwizard_title">Host Setup</string>
+	<string name="accountwizard_step1_title">Start XBMC.</string>
+	<string name="accountwizard_step1_p1">I will search for XBMC hosts now. If you don\'t already have, please start XBMC now and make sure that your device is connected to the same network.</string>
+	<string name="accountwizard_step1_p2">Once you\'re ready, click on <i>Next</i>.</string>
+
 	<string name="addaccount_username_label">Username</string>
 	<string name="addaccount_password_label">Password</string>
 	<string name="addaccount_next_button">Next</string>
