--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
 	<string name="accountwizard_step1_title">Start XBMC.</string>
 	<string name="accountwizard_step1_p1">I will search for XBMC hosts now. If you don\'t already have, please start XBMC now and make sure that your device is connected to the same network.</string>
 	<string name="accountwizard_step1_p2">Once you\'re ready, click on <i>Next</i>.</string>
-	<string name="accountwizard_step2a_title">Searching...</string>
+	<string name="accountwizard_step2a_title">Searching…</string>
 	<string name="accountwizard_step2b_title">Nothing found.</string>
 	<string name="accountwizard_step2b_p1">Unfortunately, I could not detect any XBMC instances in your network.</string>
 	<string name="accountwizard_step2b_p2">Click <i>Next</i> for manual configuration or retry using the button below.</string>
@@ -49,6 +49,8 @@
 	<string name="accountwizard_step3a_title">XBMC found.</string>
 	<string name="accountwizard_step3a_p1">Please select the instance you want to set up below.</string>
 	<string name="accountwizard_step3a_prev">Scan Again</string>
+	<string name="accountwizard_step3a_waiting_title">Connecting to %1$s…</string>
+	<string name="accountwizard_step3a_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
 
 	<string name="addaccount_username_label">Username</string>
 	<string name="addaccount_password_label">Password</string>
