--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,13 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 	<string name="app_name">XBMC Remote</string>
 
+	<string name="cancel">Cancel</string>
 	<string name="next">Next</string>
+	<string name="password">Password</string>
 	<string name="prev">Previous</string>
 	<string name="retry">Retry</string>
+	<string name="set">Set</string>
+	<string name="username">Username</string>
 
 	<string name="empty_albums">No albums found.</string>
 	<string name="empty_artists">No artists found.</string>
@@ -51,6 +55,7 @@
 	<string name="accountwizard_step3a_prev">Scan Again</string>
 	<string name="accountwizard_step3a_waiting_title">Connecting to %1$s…</string>
 	<string name="accountwizard_step3a_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
+	<string name="accountwizard_step3a_login_title">Credentials Needed</string>
 
 	<string name="addaccount_username_label">Username</string>
 	<string name="addaccount_password_label">Password</string>
