User/pass are used in connection manager when provided.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
 	<string name="accountwizard_step3a_waiting_title">Connecting to %1$s…</string>
 	<string name="accountwizard_step3a_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
 	<string name="accountwizard_step3a_login_title">Credentials Needed</string>
+	<string name="accountwizard_step3a_login_error">Wrong credentials. Please try again.</string>
 
 	<string name="addaccount_username_label">Username</string>
 	<string name="addaccount_password_label">Password</string>
