--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,12 @@
 	<string name="accountwizard_step3a_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
 	<string name="accountwizard_step3a_login_title">Credentials Needed</string>
 	<string name="accountwizard_step3a_login_error">Wrong credentials. Please try again.</string>
+	<string name="accountwizard_step3b_title">Manual Setup</string>
+	<string name="accountwizard_step3b_p1">Please enter setup configuration manually below.</string>
+	<string name="accountwizard_step3b_displayname">Display Name</string>
+	<string name="accountwizard_step3b_host">IP Address</string>
+	<string name="accountwizard_step3b_port">Port</string>
+	<string name="accountwizard_step3b_test">Test</string>
 	<string name="accountwizard_step4_title">All Done!</string>
 	<string name="accountwizard_step4_p1">Setup completed. You can now use the Remote App with XBMC or setup additional options.</string>
 	<string name="accountwizard_step4_prev">Add Another</string>
