--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
 	<string name="cancel">Cancel</string>
 	<string name="next">Next</string>
+	<string name="ok">OK</string>
 	<string name="password">Password</string>
 	<string name="prev">Previous</string>
 	<string name="retry">Retry</string>
@@ -57,6 +58,7 @@
 	<string name="accountwizard_step3a_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
 	<string name="accountwizard_step3a_login_title">Credentials Needed</string>
 	<string name="accountwizard_step3a_login_error">Wrong credentials. Please try again.</string>
+	<string name="accountwizard_step3a_already_added">A host with the same name is already added.</string>
 	<string name="accountwizard_step3b_title">Manual Setup</string>
 	<string name="accountwizard_step3b_p1">Please enter setup configuration manually below.</string>
 	<string name="accountwizard_step3b_displayname">Display Name</string>
