Added logic for manual host add.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,20 +55,22 @@
 	<string name="accountwizard_step2b_p1">Unfortunately, I could not detect any XBMC instances in your network.</string>
 	<string name="accountwizard_step2b_p2">Click <i>Next</i> for manual configuration or retry using the button below.</string>
 	<string name="accountwizard_step2b_p3"><i>If you need help configuring XBMC, you will find some tips and tricks on the XBMC forum.</i></string>
+	<string name="accountwizard_step3_already_added">A host with the same name is already added.</string>
+	<string name="accountwizard_step3_empty_name">You must give a display name, that\'s how your XBMC host is identified.</string>
+	<string name="accountwizard_step3_waiting_title">Connecting to %1$s…</string>
+	<string name="accountwizard_step3_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
+	<string name="accountwizard_step3_login_title">Credentials Needed</string>
+	<string name="accountwizard_step3_login_error">Wrong credentials. Please try again.</string>
 	<string name="accountwizard_step3a_title">XBMC found.</string>
 	<string name="accountwizard_step3a_p1">Please select the instance you want to set up below.</string>
 	<string name="accountwizard_step3a_prev">Scan Again</string>
-	<string name="accountwizard_step3a_waiting_title">Connecting to %1$s…</string>
-	<string name="accountwizard_step3a_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
-	<string name="accountwizard_step3a_login_title">Credentials Needed</string>
-	<string name="accountwizard_step3a_login_error">Wrong credentials. Please try again.</string>
-	<string name="accountwizard_step3a_already_added">A host with the same name is already added.</string>
 	<string name="accountwizard_step3b_title">Manual Setup</string>
 	<string name="accountwizard_step3b_p1">Please enter setup configuration manually below.</string>
 	<string name="accountwizard_step3b_displayname">Display Name</string>
 	<string name="accountwizard_step3b_host">IP Address</string>
 	<string name="accountwizard_step3b_port">Port</string>
-	<string name="accountwizard_step3b_test">Test</string>
+	<string name="accountwizard_step3b_prev">Scan Again</string>
+	<string name="accountwizard_step3b_next">Test</string>
 	<string name="accountwizard_step4_title">All Done!</string>
 	<string name="accountwizard_step4_p1">Setup completed. You can now use the Remote App with XBMC or setup additional options.</string>
 	<string name="accountwizard_step4_prev">Add Another</string>
