Added more icons to icon font.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,28 +99,66 @@
 	<string name="addaccount_progress_checkingapiversion">Probing XBMC\u2026</string>
 
 
-	<string name="ic_logo">\u0031</string>
-
-	<string name="ic_expand">\u002a</string>
-	<string name="ic_collapse">\u002b</string>
-
-	<string name="ic_settings">\u0026</string>
-	<string name="ic_remote">\u0027</string>
-	<string name="ic_refresh">\u0028</string>
-
-	<string name="ic_home">\u002e</string>
-	<string name="ic_music">\u002d</string>
-	<string name="ic_movie">\u002c</string>
-	<string name="ic_tv">\u0021</string>
-	<string name="ic_picture">\u0029</string>
-	<string name="ic_addon">\u002f</string>
-	<string name="ic_computer">\u0030</string>
-	<string name="ic_overlay">\u0032</string>
-
-	<string name="ic_star_25">\u0025</string>
-	<string name="ic_star_50">\u0024</string>
-	<string name="ic_star_75">\u0023</string>
-	<string name="ic_star_100">\u0022</string>
+	<string name="ic_warning">\u0021</string>
+	<string name="ic_volume_on">\u0022</string>
+	<string name="ic_volume_muted">\u0023</string>
+	<string name="ic_view_as_list">\u0024</string>
+	<string name="ic_view_as_grid">\u0025</string>
+	<string name="ic_stop">\u0026</string>
+	<string name="ic_star_100">\u0027</string>
+	<string name="ic_star_75">\u0028</string>
+	<string name="ic_star_50">\u0029</string>
+	<string name="ic_rewind">\u002a</string>
+	<string name="ic_return_from_fullscreen">\u002b</string>
+	<string name="ic_replay">\u002c</string>
+	<string name="ic_repeat">\u002d</string>
+	<string name="ic_remote">\u002e</string>
+	<string name="ic_refresh">\u002f</string>
+	<string name="ic_previous">\u0030</string>
+	<string name="ic_prev_item">\u0031</string>
+	<string name="ic_play_over_video">\u0032</string>
+	<string name="ic_movie">\u0033</string>
+	<string name="ic_logo">\u0034</string>
+	<string name="ic_labels">\u0035</string>
+	<string name="ic_keyboard">\u0036</string>
+	<string name="ic_home">\u0037</string>
+	<string name="ic_headphones">\u0038</string>
+	<string name="ic_good">\u0039</string>
+	<string name="ic_full_screen">\u003a</string>
+	<string name="ic_forward">\u003b</string>
+	<string name="ic_collapse">\u003c</string>
+	<string name="ic_cast">\u003d</string>
+	<string name="ic_cancel">\u003e</string>
+	<string name="ic_back">\u003f</string>
+	<string name="ic_addon">\u0040</string>
+	<string name="ic_add_to_queue">\u0041</string>
+	<string name="ic_actor">\u0042</string>
+	<string name="ic_accept">\u0043</string>
+	<string name="ic_bad">\u0044</string>
+	<string name="ic_favorite">\u0045</string>
+	<string name="ic_fast_forward">\u0046</string>
+	<string name="ic_expand">\u0047</string>
+	<string name="ic_error">\u0048</string>
+	<string name="ic_download">\u0049</string>
+	<string name="ic_dock">\u004a</string>
+	<string name="ic_computer">\u004b</string>
+	<string name="ic_collection">\u004c</string>
+	<string name="ic_music">\u004d</string>
+	<string name="ic_next">\u004e</string>
+	<string name="ic_next_item">\u004f</string>
+	<string name="ic_overflow">\u0050</string>
+	<string name="ic_pause">\u0051</string>
+	<string name="ic_pause_over_video">\u0052</string>
+	<string name="ic_picture">\u0053</string>
+	<string name="ic_play">\u0054</string>
+	<string name="ic_search">\u0055</string>
+	<string name="ic_settings">\u0056</string>
+	<string name="ic_share">\u0057</string>
+	<string name="ic_shuffle">\u0058</string>
+	<string name="ic_slideshow">\u0059</string>
+	<string name="ic_sort_by_size">\u005a</string>
+	<string name="ic_star_00">\u005b</string>
+	<string name="ic_star_25">\u005c</string>
 
 	<string name="drawer_open">Open navigation drawer</string>
 	<string name="drawer_close">Close navigation drawer</string>
