--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 	<string name="next">Next</string>
 	<string name="ok">OK</string>
 	<string name="password">Password</string>
+	<string name="poster">Poster</string>
 	<string name="prev">Previous</string>
 	<string name="retry">Retry</string>
 	<string name="set">Set</string>
