--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
 	<string name="cancel">Cancel</string>
 	<string name="exit">Exit</string>
+	<string name="fanart">Fanart</string>
 	<string name="minutes_short">min</string>
 	<string name="more">More</string>
 	<string name="next">Next</string>
