Added first bunch of data fields to movie details.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 	<string name="set">Set</string>
 	<string name="setup">Setup</string>
 	<string name="username">Username</string>
+	<string name="votes">Votes</string>
 
 	<string name="empty_albums">No albums found.</string>
 	<string name="empty_artists">No artists found.</string>
